--- a/orga/translations/en.json
+++ b/orga/translations/en.json
@@ -172,6 +172,12 @@
         }
       }
     },
+    "campaign-modification" : {
+      "actions": {
+        "edit": "Edit"
+      },
+      "title": "Edit a campaign"
+    },
     "campaign-review": {
       "description": "According to the target profile selected and the results of your campaign, Pix recommends focusing on the following subjects, sorted by relevance ({bubble}).",
       "header": {
