[ORGA] change api-errors to api-errors-messages

--- a/orga/translations/en.json
+++ b/orga/translations/en.json
@@ -1,5 +1,5 @@
 {
-  "api-errors": {
+  "api-errors-messages": {
     "global": "An error occurred. Please try again later."
   },
   "current-lang": "en",
