--- a/orga/translations/fr.json
+++ b/orga/translations/fr.json
@@ -1,5 +1,5 @@
 {
-  "api-errors": {
+  "api-errors-messages": {
     "global": "Une erreur est survenue. Veuillez réessayer ultérieurement."
   },
   "current-lang": "fr",
