--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -702,7 +702,12 @@
             },
             "competence-card": {
                 "congrats": "Well done!",
-                "details": "details"
+                "details": "details",
+                "image-info": {
+                    "first-level": "",
+                    "level": "",
+                    "no-level": ""
+                }
             },
             "first-title": "You have 16 skills to test. '<br>'Get your thinking hat on and off we go!",
             "resume-campaign-banner": {
