--- a/orga/translations/fr.json
+++ b/orga/translations/fr.json
@@ -188,7 +188,10 @@
           "competences-certifiables": "Comp. certifiables",
           "first-name": "Nom",
           "last-name": "Prénom",
-          "pix-score": "Score Pix",
+          "pix-score": {
+            "label": "Score Pix",
+            "value": "{score, number}"
+          },
           "sending-date": {
             "label": "Date d'envoi",
             "on-hold": "En attente"
