[DEMO] add current-lang in healthcheck controller

--- a/api/translations/en.json
+++ b/api/translations/en.json
@@ -1,4 +1,5 @@
 {
+  "current-lang" : "en",
   "organization-invitation-email": {
     "title": "You are invited to join Pix Orga",
     "subtitle": "With the Pix Orga platform, create and manage testing campaigns and monitor the progress of your participants.",
