--- a/api/translations/fr.json
+++ b/api/translations/fr.json
@@ -1,4 +1,5 @@
 {
+  "current-lang": "fr",
   "organization-invitation-email": {
     "title": "Vous êtes invité(e) à rejoindre Pix Orga",
     "subtitle": "La plateforme Pix Orga vous permet de créer, gérer des campagnes de test et suivre la progression de vos participants.",
