--- a/mon-pix/translations/fr.json
+++ b/mon-pix/translations/fr.json
@@ -947,7 +947,7 @@
                 "last-name": "Nom",
                 "email": "Adresse e-mail",
                 "username": "Identifiant",
-                "lang": "Langues",
+                "lang": "Langue",
                 "edit-button": "Modifier",
                 "fields": {
                     "select": {
