[ORGA] Translate campaign banner

--- a/orga/translations/en.json
+++ b/orga/translations/en.json
@@ -12,6 +12,9 @@
     "global": "An error occurred. Please try again later."
   },
   "banners": {
+    "campaigns": {
+      "message": "Please note that you must check if the students are '<strong>'eligible to certification'</strong>' before signing them up on certification sessions. You can do a '<'a href={documentationLink} class=\"link link--white link--bold link--underlined\" target=\"_blank\" rel=\"noopener noreferrer\"'>'profile collection campaign {faIcon}'</a>' to be sure."
+    },
     "import": {
       "link-to": "import or reimport the students database",
       "message": "Start of school year: the '<strong>'admin'</strong>' must {linkTo} to start using Pix Orga. Learn more on '<a href=\"https://view.genial.ly/5f295b80302a810d2ff9fa60/?idSlide=cd748a12-ef8e-4683-8139-eb851bd0eb23\" class=\"link link--white link--bold link--underlined\" target=\"_blank\" rel=\"noopener noreferrer\">'middle schools {faIcon}'</a>' and '<a href=\"https://view.genial.ly/5f46390591252c0d5246bb63/?idSlide=cd748a12-ef8e-4683-8139-eb851bd0eb23\" class=\"link link--white link--bold link--underlined\" target=\"_blank\" rel=\"noopener noreferrer\">'high schools {faIcon}'</a>'"
